# whisperspeech-webui

./: .gitignore  LICENSE  README.md  api_example.html  babel.cfg  changes  install_linux_rocm.sh  main.py  main2.py  pyproject.toml  requirements.txt  requirements_cuda_12.1.txt  requirements_cuda_12.4.txt  requirements_cuda_12.6.txt  requirements_rocm.txt  requirements_rocm_5.7.txt  requirements_rocm_6.0.txt  requirements_rocm_6.1.txt  requirements_rocm_6.2.4.txt  requirements_rocm_6.2.txt  requirements_rocm_6.3.txt  requrements_cuda_11.8.txt  run.sh  webui.py
locale/: base.pot  messages.pot
locale/pl_PL/LC_MESSAGES/: messages.mo  messages.po
whisperspeech-webui/: index.js  manifest.json
