[project]
name = "whisperspeech-webui"
version = "4.1.0"
description = "Web UI for WhisperSpeech"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "babel==2.16.0",
    "gradio==5.43.1",
    "rich-argparse==1.7.1",
    "webdataset==0.2.111",
    "whisperspeech==0.8.9",
]

[project.optional-dependencies]
cpu = [
    "torch==2.8.0", 
    "torchaudio==2.8.0"
]
cuda = [
    "torch==2.8.0", 
    "torchaudio==2.8.0"
]
rocm = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "pytorch-triton-rocm"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" }
]

torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" }
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" }
    ]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" }, 
        { extra = "rocm" }
    ]
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true