[project]
name = "whisperspeech-webui"
version = "4.2.0"
description = "Web UI for WhisperSpeech"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "babel==2.17.0",
    "gradio==6.3.0",
    "rich-argparse==1.7.2",
    "webdataset==1.0.2",
    "ipython==9.9.0",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchaudio",
    "whisperspeech==0.8.9",
]
cuda = [
    "torch",
    "torchaudio",
    "whisperspeech==0.8.9",
]
rocm = [
    "torch",
    "torchaudio<2.10",
    "triton",
    "whisperspeech==0.8.9",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" }
]

torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" }
]

triton = [
    { index = "pytorch-rocm", extra = "rocm" }
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" }, 
        { extra = "rocm" }
    ]
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/"
format = "flat"
